Save plain text version of notes.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "preupdate-webdriver": "npm install"
   },
   "dependencies": {
+    "html-to-text": "^2.1.0",
     "sanitize-html": "^1.12.0"
   }
 }
